# latextranslator

./: .gitignore  Clase_1.tex  LICENSE  Matrices.tex  Pendientes.txt  README  README.MD  README.md  basura.json  basura.py  config.py  index.html  main.css  main.py  main.spec  pyproject.toml  requirements.txt  translations.json  translations.py  translator.py
blindtex/: tex2all.py
blindtex/interpreter/: reader.py
blindtex/iotools/: iotools.py
blindtex/lang/dicts/: spanish.json
blindtex/latex2ast/: parser.out  parsetab.py
css/: menu.css  style.css
iconos/: iconos.css
iconos/fonts/: untitled-font-1.eot
instrucciones/: index.html  main.css
latextranslator/: __init__.py  basura.py  main.py  translations.py  translator.py
latextranslator/blindtex/: __init__.py  mainBlindtex.py  tex2all.py
latextranslator/blindtex/interpreter/: reader.py
latextranslator/blindtex/lang/dicts/: spanish.json
latextranslator/blindtex/latex2ast/: converter.py  lexer.py  parser.py
mas/: index.html  main.css
quienes-somos/: index.html  main.css
test/: test_formulas.py  test_main.py  test_titulos.py
tests/: test_advance_search.py  test_enumerates.py  test_equations.py  test_formulas.py  test_helper.py  test_string.py  test_titles.py  test_titulos.py
tests/fixtures/: .txt  comments.tex  comments_fixed.tex  euler_equation.tex  macros.tex  macros_fixed.tex
traduccion/: Main.py  Utilities.py  index.php  main.css
traduccion/blindtex/interpreter/: reader.py
traduccion/blindtex/lang/dicts/: spanish.json
traduccion/descargar/: index.php
